# ame16

./: CMakeLists.txt  LICENCE  README.md  ame16.cpp  ame16.h  pyame.cpp
tests/: CMakeLists.txt  test_ame.cpp
